--- a/P010579.opf/meta.yml
+++ b/P010579.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010579
+id: P010579
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1CZ1481
   title: རྒྱལ་བ་རྒོད་ཚང་པའི་ཞལ་གདམས
-  volume: ''
   author: ''
+  volumes: {}
