--- a/P010579.opf/layers/v001/Pagination.yml
+++ b/P010579.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: a9ada03b4dd14ef48bda3d7fc9bd65d0
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   92ba4dcc95c44c17ab284ee7a25a83b4:
